--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.2</version>
+      </plugin>
     </plugins>
   </build>
 </project>
